--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1218,7 +1218,7 @@ uobflavour.30.t:0 "애니 케니가 서거하다"
 uobflavour.30.d:0 "The famous suffragette Annie Kenney has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
 uobflavour.30.a:0 "Memento mori."
 
-uobflavour.31.t:0 "알란 브루크 베번이 서거하다"
+uobflavour.31.t:0 "알란 브루크가 서거하다"
 uobflavour.31.d:0 "The renowned Commander Alan Brooke has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
 uobflavour.31.a:0 "Memento mori."
 
