--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -4,14 +4,14 @@ worldnews.1.t:0 "제 2차 미국 내전"
 worldnews.1.d:0 "잘 알지 못하는 외국인들에게는 미국의 위기가 갑자기 발생한 것으로 보일 수도 있겠지만, 전문가들은 지난 수년간 내전 발발의 조짐이 보였다는 것에 동의합니다. 1925 년 뉴욕 증권 거래소가 붕괴한 이래로 미국 경제는 꾸준히 침체기에 접어 들었습니다. \n이제 미국은 기존 정부의 지지자들, 생디칼리즘을 내세운 아메리카 노동 연합, 보수적이고 외국인을 혐오하는 미주 연방간의 3자간 내전으로 돌입했습니다. 이미 유럽에서 온 자원병들이 자신들이 지지하는 진영을 위해 싸운다는 보고가 있었습니다. 어쩌면 2차 아메리카 내전은 인류에게 힘든 시기에 그저 세계의 강대국들간에 벌어질 많은 전쟁 중 하나일 뿐일 수도 있습니다."
 worldnews.1.a:0 "골치 아픈 사건이 터졌군."
 
-worldnews.2.t:0 "The Savoyard Crisis Resolved"
-worldnews.2.surrender:0 "After a demand by the Commune of France that the province of Haute-Savoie be immediately ceded due to 'persecution of the French population', the Swiss government decided to avoid the threat of war and agreed, stating that a peaceful transfer of ownership was preferable to bloodshed.\n\nThis is a victory for the French government, which has already declared the reacquisition of Haute-Savoie another victory of the world's working class."
-worldnews.2.swiwin:0 "After a demand by the Commune of France that the province of Haute-Savoie be immediately ceded due to 'persecution of the French population', the world looked to be on the brink of another conflict in central Europe. However, after tense debates and political discourse, the crisis has been resolved without bloodshed or the concession of Swiss occupied territories.\n\nFor now, the fragile peace in Europe is maintained, although the French willingness to resort to confrontational tactics over territorial disputes has rattled international observers."
-worldnews.2.enemies:0 "After a demand by the Commune of France that the province of Haute-Savoie be immediately ceded due to 'persecution of the French population', the Swiss government decided to avoid the threat of war and agreed. Despite a desperate attempt to find international support for the retention of the region under the Swiss government, no nation seemed willing to risk war over the French demands.\n\nThis is a victory for the French government, which has already declared the reacquisition of Haute-Savoie another victory of the world's working class."
-worldnews.2.austria:0 "Peace reigned supreme today as the Commune of France revoked their demands for the immediate return of the Haute-Savoie region from Swiss control. It is reported that the Commune decided to revoke its claim after a threat of war from the Austrian Empire, who supported Switzerland in the crisis over the region.\n\nFor now the region will remain under the guardianship of the Swiss Confederation, who have promised to return the territory once the 'True French Government' is restored in Paris."
-worldnews.2.germany:0 "Peace reigned supreme today as the Commune of France revoked their demands for the immediate return of the Haute-Savoie region from Swiss control. It is reported that the Commune decided to revoke its claim after a threat of war from the German Empire, who supported Switzerland in the crisis over the region.\n\nFor now the region will remain under the guardianship of the Swiss Confederation, who have promised to return the territory once the 'True French Government' is restored in Paris."
-worldnews.2.a:0 "Syndicalism spreads."
-worldnews.2.b:0 "Swiss neutrality is preserved."										
+worldnews.2.t:0 "사보이 위기가 해결되다"
+worldnews.2.surrender:0 "'프랑스인에 대한 박해'를 이유로 오테-사부아를 즉시 양도하라는 프랑스 코뮌의 요구에 스위스 정부는 전쟁의 위협을 피하기로 했으며, 요구에 승낙하며 평화적인 소유권 이전이 유혈 사태보다 낫다고 말했습니다.\n\n이는 이미 오테-사부아의 재획득이 전세계 노동자 계층의 또다른 승리라고 선언한 프랑스 정부의 승리입니다."
+worldnews.2.swiwin:0 " "'프랑스인에 대한 박해'를 이유로 오테-사부아를 즉시 양도하라는 프랑스 코뮌의 요구에 전세계는 새로운 갈등의 직전에 놓인 중부유럽을 지켜봤습니다.하지만 팽팽한 논쟁과 정치적 담론이 있은 후, 이 위기는 유혈 사태나 스위스의 점령지 양보 없이 해결되었습니다.\n\n영토 분쟁을 둘러싼 대립 전술에 의지하려는 프랑스의 의지가 국제적인 관측통들을 동요시켰음에도 불구하고 현재 유럽의 취약한 평화는 유지되고 있습니다."
+worldnews.2.enemies:0 "'프랑스인에 대한 박해'를 이유로 오테-사부아를 즉시 양도하라는 프랑스 코뮌의 요구에 스위스 정부는 전쟁의 위협을 피하기로 했으며, 요구에 승낙했습니다. 스위스는 이 지역을 유지하기 위해 국제적인 지지를 구하려고 필사적으로 노력했음에도 불구하고, 그 어떤 나라도 프랑스와 전쟁하는 위험을 감수하지 않은 것으로 보입니다.\n\n이는 이미 오테-사부아의 재획득이 전세계 노동자 계층의 또다른 승리라고 선언한 프랑스 정부의 승리입니다."
+worldnews.2.austria:0 "오늘 프랑스 코뮌이 스위스가 통제하는 오테-사부아 지역을 즉시 양도하라는 요구를 철회함에 따라 평화가 유지될 것입니다. 코뮌은 오스트리아 제국이 이 위기에서 스위스를 지지하며 전쟁 위협을 하자 요구를 철회하기로 결정한 것으로 밝혀졌습니다. \n\n현재 이 지역은 스위스 연방의 보호 아래에 있으며, 스위스는 파리에 '진정한 프랑스 정부'가 복구되면 이 지역을 반환하겠다고 약속했습니다."
+worldnews.2.germany:0 "오늘 프랑스 코뮌이 스위스가 통제하는 오테-사부아 지역을 즉시 양도하라는 요구를 철회함에 따라 평화가 유지될 것입니다. 코뮌은 독일 제국이 이 위기에서 스위스를 지지하며 전쟁 위협을 하자 요구를 철회하기로 결정한 것으로 밝혀졌습니다. \n\n현재 이 지역은 스위스 연방의 보호 아래에 있으며, 스위스는 파리에 '진정한 프랑스 정부'가 복구되면 이 지역을 반환하겠다고 약속했습니다."
+worldnews.2.a:0 "생디칼리즘이 퍼졌군."
+worldnews.2.b:0 "스위스의 중립이 지켜졌군."										
 
 worldnews.3.t:0 "2차 러시아 내전"
 worldnews.3.d:0 "20 년전, 세계대전의 마지막 몇 년 동안 러시아 제국은 혼란에 빠져 민족주의 운동인 백군과 적군으로 찢어졌습니다. 독일의 개입 이후 공화당 정부는 볼셰비키를 격퇴했지만 러시아의 혁명 정신은 사라지지 않았습니다. \n\n케렌스키 정부의 비효율적인 토지 개혁과 브레스트-리토프스크 배상금 납부를 위한 긴축 조치와 대통령 암살 이후의 정부 위기이후, 서부 지역의 도시들은 다시금 적색 물결에 잠겼습니다. 부하린의 소비에트 러시아가 승리할 것인가 아니면 백군의 충직 한 지지자들이 반대자들을 두번째로 물리칠 것인가는 시간만이 알고 있습니다."
@@ -62,7 +62,7 @@ worldnews.14.d:0 "리투아니아에서 가장 유명한 인상주의 작가인 
 worldnews.14.a:0 "그는 세계 정세를 가능한 한 악화시키고 싶은 걸까?"
 
 worldnews.15.t:0 "케렌스키 대통령 암살"
-worldnews.15.d:0 "케렌스키 대통령이 상원 의회에 가는 길에 총에 맞아 숨졌습니다! 가해자는 경찰에 의해 체포되었지만 공격자의 목표와 의도는 알 수 없습니다. 케렌스키는 어설픈 토지 개혁과 비효율적인 통치로 인해 러시아 국민들에게 인기를 얻지 못했음에도 불구하고 수년간 이 나라를 하나로 이끌었으며, 그의 암살로 러시아는 혼란에 빠졌습니다. 상원 의원은 케렌스키의 대체자에 대해 이미 논의하고 있으며, 좌파와 우파 양측 모두 새로운 연합이 형성되고 있는 반면에, 데니키, 브란겔, 코르닐로프와 같은 군인들은 민주주의를 해산하고 '어머니 러시아'를 지키기위해 위해 개입을 준비하고 있습니다..."
+worldnews.15.d:0 "케렌스키 대통령이 상원 의회에 가는 길에 총에 맞아 숨졌습니다! 가해자는 경찰에 의해 체포되었지만 공격자의 목표와 의도는 알 수 없습니다. 케렌스키는 어설픈 토지 개혁과 비효율적인 통치로 인해 러시아 국민들에게 인기를 얻지 못했음에도 불구하고 수년간 이 나라를 하나로 이끌었으며, 그의 암살로 러시아는 혼란에 빠졌습니다. 상원 의원은 케렌스키의 대체자에 대해 이미 논의하고 있으며, 좌파와 우파 양측 모두 새로운 연합이 형성되고 있는 반면에, 데니키, 브란겔, 코르닐로프와 같은 군인들은 민주주의를 해산하고 '어머니 러시아'를 지키기 위해 개입을 준비하고 있습니다..."
 worldnews.15.a:0 "야만적이군!"
 
 worldnews.16.t:0 "플라타 전쟁"
