--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1263,7 +1263,7 @@ uobflavour.40.d:0 "Oswald Mosley of the Union of Britain has invited prominent c
 uobflavour.40.a:0 "Have a safe flight, comrade!"
 
 uobflavour.41.t:0 "전체주의 선언"
-uobflavour.41.d:0 "무솔리니, 발루아, 베리야와 다른 관심있어하는 단체들이 그들의 공통점을 논의하기 위해 오늘 버밍엄에 도착했습니다. 최대주의, 소렐주의, 그리고 국가생디칼리즘이 모두 사회주의 투쟁에서 국가의 우월성을 기본 원칙으로 하는 것과 국가에서 국가 정체성의 역할, 그리고 사회주의를 지키고 발전시키는데 강력한 중앙 권력이 필요하다는 것을 모두 공유한다고 합의되었습니다. 이 선언은 또한 사회주의 국가가 인간 발전의 마지막 단계이며 민주주의는 사회주의를 성취하기 위해 필요하지 않다고 주장했습니다. 다른 사회주의 파벌들은 이러한 발언들을 "전체주의" 또는 전체주의적 사회주의라 부르면서 많은 비판을 가했습니다. 모즐리는 성명서에 그 이름을 추가하며 열렬히 받아들였고, 이를 사회주의에 대한 완전한 헌신으로 돌렸습니다.
+uobflavour.41.d:0 "무솔리니, 발루아, 베리야와 다른 관심있어하는 단체들이 그들의 공통점을 논의하기 위해 오늘 버밍엄에 도착했습니다. 최대주의, 소렐주의, 그리고 국가생디칼리즘이 모두 사회주의 투쟁에서 국가의 우월성과 국가에서 국가 정체성의 역할, 그리고 사회주의를 지키고 발전시키는데 강력한 중앙 권력이 필요하다는 것을 기본 원칙으로 모두 공유한다고 합의되었습니다. 이 선언은 또한 사회주의 국가가 인간 발전의 마지막 단계이며 민주주의는 사회주의를 성취하기 위해 필요하지 않다고 주장했습니다. 다른 사회주의 파벌들은 이러한 발언들을 "전체주의" 또는 전체주의적 사회주의라 부르면서 많은 비판을 가했습니다. 모즐리는 성명서에 그 이름을 추가하며 열렬히 받아들였고, 이를 사회주의에 대한 완전한 헌신으로 돌렸습니다.
 uobflavour.41.a:0 "인민들이 이 미친 짓을 거부하기를 바라자!"
 uobflavour.41.b:0 "사람들은 이 미친 짓을 거부해야 한다!"
 
