--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -103,7 +103,7 @@ SWI_develop_cantons:0 "Canton Development Initiative"
 SWI_canton_improvement:0 "Subsidise Swiss Steel"
 SWI_swiss_seas:0 "Swiss on the High Seas"
 SWI_military_factories:0 "오리콘-벌리에 보조금 제공"
-SSWI_final_factories:0 "스위스 전시 경제"
+SWI_final_factories:0 "스위스 전시 경제"
 SWI_expanding_the_shipyards:0 "조선소 확장"
 SWI_merchant_marine:0 "상선대에 집중"
 SWI_military_navy:0 "무장 해군에 집중"
