--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -404,7 +404,7 @@ japdom.8.a:0 "현명하게 선택할 것이다."
 #\n\n General Nagata's analysis is nearly identical, but he has come to a different conclusion, and argues that building up a total war capable army should be the top objective. He calls for expanding our mobilisation capability, modernising equipment, and centralising the command structure."
 
 japdom.9.t:0 "국가보안법"
-japdom.9.d:0 "악명 높은 평화유지법은 1923년 9월 간토 무권위주의자 봉기와 같은 해 12월 생디칼리스트의 히로히토 황태자 암살 시도 이후 공산주의의 공포 속에서 다나카 정권에 의해 1926년 초에 도입되었습니다. 이법은 민권을 크게 제안했으며 다나카 장군의 엄격한 통치를 상징했습니다. 1926년 헌법 개정으로 이 법은 폐지되었으나, 현재 스즈키 기사부로 총리는 심하게 완화되고 '국가보안법'으로 이름이 바뀔 지라도 그 법의 재도입은 원하고 있습니다. 그는 심지어 그의 내각 내에서도 강한 반대를 만났고 여론은 역대 최저 수준으로 떨어졌지만, 스즈키는 그것의 재도입이 생디칼리즘의 밀물에 맞서기 위한 필요한 단계라고 믿습니다. 그리고 그의 의견은 혼자가 아닙니다. 입헌정우회의 나카지마 치쿠헤이와 민정당의 아다치 겐조가 이끄는 다당 교섭단체는 이 법을 '헌정의 마지막 보루'라고 선언하며 통과를 지지했습니다. 상원과 하원도 이 법에 찬성하고 있습니다."
+japdom.9.d:0 "악명 높은 평화유지법은 1923년 9월 간토 무권위주의자 봉기와 같은 해 12월 생디칼리스트의 히로히토 황태자 암살 시도 이후 공산주의의 공포 속에서 다나카 정권에 의해 1926년 초에 도입되었습니다. 이 법은 민권을 크게 제한했으며 다나카 장군의 엄격한 통치를 상징했습니다. 1926년 헌법 개정으로 이 법은 폐지되었으나, 현재 스즈키 기사부로 총리는 심하게 완화되고 '국가보안법'으로 이름이 바뀔 지라도 그 법의 재도입은 원하고 있습니다. 그는 심지어 그의 내각 내에서도 강한 반대를 만났고 여론은 역대 최저 수준으로 떨어졌지만, 스즈키는 그것의 재도입이 생디칼리즘의 밀물에 맞서기 위한 필요한 단계라고 믿습니다. 그리고 그의 의견은 혼자가 아닙니다. 입헌정우회의 나카지마 치쿠헤이와 민정당의 아다치 겐조가 이끄는 다당 교섭단체는 이 법을 '헌정의 마지막 보루'라고 선언하며 통과를 지지했습니다. 상원과 하원도 이 법에 찬성하고 있습니다."
 japdom.9.a:0 "그 법안이 강제로 통과되었다."
 japdom.9.b:0 "여론과 반대자들이 그 법안을 부결시켰다."
 
