--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -280,7 +280,7 @@ l_english:
  STATE_278:0 "부에노스아이레스"
  STATE_279:0 "산티아고"
  STATE_280:0 "마투그로수"
- STATE_281:0 "말리디벤"
+ STATE_281:0 "말디벤"
  STATE_282:0 "간토"
  STATE_283:0 "간쑤"
  STATE_284:0 "북섬"
