--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -2,56 +2,56 @@ l_english:
 
 ### Ideas ###
 BEL_Antwerp_Harbor:0 "네덜란드의 베스터셸데 통제"
-BEL_Antwerp_Harbor_desc:0 "After the Belgian Revolution failed in securing the state of Zeeuws-Vlaanderen, we have had no choice but to negotiate with the Dutch for expansion of the harbour of Antwerp. If tensions were to escalate between our two nations, our main trade hub would be severly hurt."
+BEL_Antwerp_Harbor_desc:0 "벨기에 혁명이 지우스-플란더른을 확보하는데 실패한 후, 우리는 앤트워프 항구의 확장을 위해 네덜란드와 협상할 수 밖에 없었습니다. 우리 두 나라 사이에 긴장이 고조된다면, 우리의 주요 무역 중심지는 심각하게 타격을 입을 것입니다."
 BEL_Antwerp_Harbor_Reinstated:0 "번창하는 무역"
-BEL_Antwerp_Harbor_Reinstated_desc:0 "With the Westerschelde dredging complete and the 'Grote Doorsteek' completed, shipping capacity of the port has reached new heights."
-BEL_Expanding_Schelde:0 "Dredging of the Westerschelde"
-BEL_Expanding_Schelde_desc:0 "To increase the shipping capacity of Antwerp, a joint effort has been made by the Belgian-Dutch government to dredge the Westerschelde and complete the 'Grote Doorsteek' program."
+BEL_Antwerp_Harbor_Reinstated_desc:0 "웨스터셀더의 준설이 완료되고 '그로트 도르스티크'가 완성되면서 항구의 선적 능력이 새로운 고지에 도달했습니다."
+BEL_Expanding_Schelde:0 "웨스터셀더의 준설"
+BEL_Expanding_Schelde_desc:0 "앤트워프의 운송 능력을 높이기 위해 벨기에-네덜란드 정부는 웨스터셀더를 준설하고 '그로트 도르스티크' 프로그램을 완료하기 위한 공동 노력을 기울였습니다."
 BEL_King_Exile:0 "망명 중인 알베르 1세"
-BEL_King_Exile_desc:0 "After the Weltkrieg ended in crushing defeat for our small nation, King Albert I was forced into exile and has followed the British Royal Family to Canada. Adored by all of his citizens for his bravery during the Weltkrieg, earning him the nickname 'Soldier King', large royalist underground movements plot his return to the throne and an end to German occupation."
+BEL_King_Exile_desc:0 "세계대전이 우리의 작은 나라를 완전히 패배시킨 후에, 알베르 1세는 강제로 추방되었고 영국 왕실을 따라 캐나다로 가게 되었습니다. 세계대전에서 그의 용맹함을 시민들에게 경배받으며, 그는 '군인 왕'이라는 별명을 얻게 되었으며, 왕족의 대규모 지하 운동으로 왕좌로 복귀하고 독일의 점령을 종식 시켰습니다."
 BEL_King_Exile2:0 "망명 중인 알베르 1세"
-BEL_King_Exile2_desc:0 "After the Weltkrieg ended in crushing defeat for our small nation, King Albert I was forced into exile and has followed the British Royal Family to Canada. Adored by all of his citizens for his bravery during the Weltkrieg, earning him the nickname 'Soldier King', large royalist underground movements plot his return to the throne and an end to German occupation."
+BEL_King_Exile2_desc:0 "세계대전이 우리의 작은 나라를 완전히 패배시킨 후에, 알베르 1세는 강제로 추방되었고 영국 왕실을 따라 캐나다로 가게 되었습니다. 세계대전에서 그의 용맹함을 시민들에게 경배받으며, 그는 '군인 왕'이라는 별명을 얻게 되었으며, 왕족의 대규모 지하 운동으로 왕좌로 복귀하고 독일의 점령을 종식 시켰습니다."
 BEL_anti_german_sentiment1:0 "반독일 정서"
-BEL_anti_german_sentiment1_desc:0 "High tax rates, favouritism towards Germans and a general lack of interest by German administrators and industrialists in Flemish-Wallonian living conditions have only worsened the aversion for the German Regime causing large social inequality and unrest, especially in Wallonia."
+BEL_anti_german_sentiment1_desc:0 "독일인에 대한 높은 세율, 편애주의, 플랑드르-왈로니아의 생활 조건에서의 독일 행정가와 산업인들의 일반적 관심 부족은 독일 정권에 대한 혐오감을 더욱 심화시켰으며, 특히 왈로니아에서 큰 사회적 불평등과 소요 사태를 초래했습니다."
 BEL_anti_german_sentiment2:0 "반독일 정서"
-BEL_anti_german_sentiment2_desc:0 "High tax rates, favouritism towards Germans and a general lack of interest by German administrators and industrialists in Flemish-Wallonian living conditions have only worsened the aversion for the German Regime causing large social inequality and unrest, especially in Wallonia."
+BEL_anti_german_sentiment2_desc:0 "독일인에 대한 높은 세율, 편애주의, 플랑드르-왈로니아의 생활 조건에서의 독일 행정가와 산업인들의 일반적 관심 부족은 독일 정권에 대한 혐오감을 더욱 심화시켰으며, 특히 왈로니아에서 큰 사회적 불평등과 소요 사태를 초래했습니다."
 BEL_anti_german_sentiment3:0 "반독일 정서"
-BEL_anti_german_sentiment3_desc:0 "High tax rates, favouritism towards Germans and a general lack of interest by German administrators and industrialists in Flemish-Wallonian living conditions have only worsened the aversion for the German Regime causing large social inequality and unrest, especially in Wallonia."
+BEL_anti_german_sentiment3_desc:0 "독일인에 대한 높은 세율, 편애주의, 플랑드르-왈로니아의 생활 조건에서의 독일 행정가와 산업인들의 일반적 관심 부족은 독일 정권에 대한 혐오감을 더욱 심화시켰으며, 특히 왈로니아에서 큰 사회적 불평등과 소요 사태를 초래했습니다."
 BEL_anti_german_sentiment4:0 "반독일 정서"
-BEL_anti_german_sentiment4_desc:0 "High tax rates, favouritism towards Germans and a general lack of interest by German administrators and industrialists in Flemish-Wallonian living conditions have only worsened the aversion for the German Regime causing large social inequality and unrest, especially in Wallonia."
+BEL_anti_german_sentiment4_desc:0 "독일인에 대한 높은 세율, 편애주의, 플랑드르-왈로니아의 생활 조건에서의 독일 행정가와 산업인들의 일반적 관심 부족은 독일 정권에 대한 혐오감을 더욱 심화시켰으며, 특히 왈로니아에서 큰 사회적 불평등과 소요 사태를 초래했습니다."
 BEL_anti_german_sentiment5:0 "반독일 정서"
-BEL_anti_german_sentiment5_desc:0 "High tax rates, favouritism towards Germans and a general lack of interest by German administrators and industrialists in Flemish-Wallonian living conditions have only worsened the aversion for the German Regime causing large social inequality and unrest, especially in Wallonia."
+BEL_anti_german_sentiment5_desc:0 "독일인에 대한 높은 세율, 편애주의, 플랑드르-왈로니아의 생활 조건에서의 독일 행정가와 산업인들의 일반적 관심 부족은 독일 정권에 대한 혐오감을 더욱 심화시켰으며, 특히 왈로니아에서 큰 사회적 불평등과 소요 사태를 초래했습니다."
 BEL_black_monday:0 "검은 월요일"
-BEL_black_monday_desc:0 "Caused by the Crash of the Berlin stock exchange and the following demise of German industries worldwide, our nation has received the full blow of it's aftermath. Coal mines in Wallonia and Limburg are being closed while unemployement rises sky-high."
-BEL_Language_Trouble:0 "Linguistic Debacle"
-BEL_Language_Trouble_desc:0 "While the majority of the population lives in Dutch speaking Flanders, French speaking Wallonia held the upper hand during most of the 19th century until the Weltkrieg. While the situation was abruptly reversed by the German occupier due to their 'Flamenpolitik', this has only increased tensions between the two groups causing a divide that has proven hard to heal. The army in particular is heavily affected by this with Walloon soldiers not understanding their Flemish superiors or refusing to do so."
+BEL_black_monday_desc:0 "베를린 증권 거래소의 붕괴와 뒤이은 전 세계 독일 산업의 몰락으로 인해 우리나라는 여파로 인한 큰 타격을 입었습니다. 왈로니아와 림부르크의 석탄 광산은 폐쇄되고 있는 반면, 실업률은 하늘 높이 치솟고 있습니다."
+BEL_Language_Trouble:0 "언어의 대실패"
+BEL_Language_Trouble_desc:0 "인구의 대다수가 네덜란드어를 사용하는 플랑드르에 살고있는 반면, 프랑스어를 사용하는 왈로니아는 세계대전까지 19세기 대부분의 기간 동안 우위를 차지했습니다. 플라멘폴리티크 때문에 독일 점령군에 의해 상황이 갑자기 역전된 반면, 이는 치유하기 힘든 분열을 야기한 두 집단 사이의 긴장만 고조시켰습니다. 특히 군대는 자신들의 플랑드르 상사들을 이해하지 못하거나 거부하여 왈로니아 군인들에게 큰 영향을 주고 있습니다."
 BEL_Protest_1936:0 "벨기에 혁명"
-BEL_Protest_1936_desc:0 "Protest! Started by the Brussels attack on the 17th of February, the resistance is finally going above ground. Strikes, terrorist actions and protests are shaking the nation. Only careful and delicate handling of the situation can prevent disaster."
+BEL_Protest_1936_desc:0 "시위 운동! 2월 17일 브뤼셀의 공격으로 시작된 저항이 마침내 지상으로 치닫고 있습니다. 파업, 테러 행위, 시위가 전국을 뒤흔들고 있습니다. 그 상황을 조심스럽고 세심하게 다루어야만 재앙을 막을 수 있습니다."
 BEL_German_Immigration:0 "독일 이주민"
-BEL_German_Immigration_desc:0 "In an effort to pacify Wallonia and integrate the region into the German Empire, King Adalbert has encouraged German citizens to settle in Wallonia."
+BEL_German_Immigration_desc:0 "왈로니아를 진정시키고 독일 제국에 이 지역을 통합시키기위한 노력의 일환으로, 아달베르트 왕은 독일 시민들이 왈로니아에 정착하도록 권장했습니다."
 BEL_Caritas_idea:0 "카리타스"
-BEL_Caritas_idea_desc:0 "The Catholic church in Flanders-Wallonia has created multiple programs to assist the poor and struggling under the name "Caritas"."
+BEL_Caritas_idea_desc:0 "플랑드르-왈로니아에 있는 가톨릭 교회는 가난한 사람들을 돕고 "카리타스"라는 이름으로 어려움을 겪고있는 사람들을 돕기 위한 여러 프로그램을 만들었습니다."
 BEL_Flemish_Lion:0 "플라망의 사자"
-BEL_Flemish_Lion_desc:0 "In an effort to turn the militarism of the Flemish movements away from Germany, the Government has launched large propaganda campaigns calling for the enlistment of thousands of Flemish against the French menace."
+BEL_Flemish_Lion_desc:0 "정부는 플랑드르 운동에 대한 군국주의를 독일로부터 몰아내려는 노력으로 프랑스의 위협에 대항해 수천명의 플랑드르인의 입대를 요구하는 대규모 선전 운동을 시작했습니다."
 BEL_Mass_Desertion:0 "대량 탈영"
-BEL_Mass_Desertion_desc:0 "Sensing weakness in the German regime and military organisation, mass desertion is spreading through the armed forces with many soldiers and junior officers joining the rebel cause."
-BEL_Military_Struck:0 "Military Struck"
+BEL_Mass_Desertion_desc:0 "독일 정권과 군사 조직의 약점을 감지한 집단 탈주가 군대를 통해 확산되고 있으며 많은 군인들과 하급 장교들이 반란을 일으키고 있습니다."
+BEL_Military_Struck:0 "군대 파업"
 BEL_Flandres_Lost:0 "플랑드르 상실"
-BEL_Flandres_Lost_desc:0 "Flemish rebels have taken control over the industrial centers of Flanders, causing great damage to our industrial output and increasing our reliance on Walloon industry."
+BEL_Flandres_Lost_desc:0 "플랑드르 반란군은 플랑드르의 산업 중심지를 장악하여 우리 산업 생산량에 큰 타격을 입히고 왈로니아 산업에 대한 의존도를 높이고 있습니다."
 BEL_Empower_Governement:0 "의회에 권한 부여"
-BEL_Empower_Governement_desc:0 "By making concessions to the Government instead of the people we might be able to retain more of our power."
+BEL_Empower_Governement_desc:0 "국민 대신에 정부에 양보함으로써 우리는 더 많은 힘을 보유할 수 있을 것입니다."
 BEL_Expansion:0 "팽창주의"
-BEL_Expansion_desc:0 "With Belgium starting to stabilise, nothing is better to rally the people than a mutual enemy and victory in war."
+BEL_Expansion_desc:0 "벨기에가 안정화되기 시작하면서, 공동적인 적과 승리하는 것만큼 사람들을 결집시키는 것도 없습니다."
 BEL_Small_Industry:0 "소규모 산업"
-BEL_Small_Industry_desc:0 "By encouraging small industries over large conglomerates we can diversify our economic landscape and be more resistant to large economic crises like Black Monday."
+BEL_Small_Industry_desc:0 "대규모 대기업에 소규모 산업을 장려함으로써 우리는 경제 상황을 다양화하고 검은 월요일과 같은 대규모 경제 위기에 잘 대응할 수 있습니다."
 BEL_Empower_Workers:0 "유연한 노동법"
-BEL_Empower_Workers_desc:0 "Flexible Labor Legislation and concessions to the Unions and Cooperatives ensure better conditions for the worker class and a rise in welfare."
+BEL_Empower_Workers_desc:0 "유연한 노동 조합과 협동 조합에 대한 입법과 양보는 노동자 계급의 복지 향상과 복지 향상을 보장합니다."
 BEL_Simplify:0 "투자 규제 완화"
-BEL_Simplify_desc:0 "To attract foreign investements and boost self-employed businesses, restrictions imposed by previous governments have been loosened."
+BEL_Simplify_desc:0 "외국인 투자를 유치하고 자영업자들을 활성화시키기 위해, 이전 정부들이 가한 규제가 완화되었습니다."
 BEL_welfare_state:0 "복지 국가의 기초"
-BEL_welfare_state_desc:0 "In an effort to close the social inequality gap which has been widened by the German government, the BWP has pushed for the foundation of the welfare state to sustain and support all citizens, no matter their social standing."
+BEL_welfare_state_desc:0 "독일 정부가 확대한 사회 불평등 갭을 줄이기 위해 BWP는 복지 국가의 기초가 사회적 지위에 관계없이 모든 시민을 지지하고 지원할 것을 촉구했습니다."
 BEL_The_Lion:0 "벨기에 열정"
-BEL_The_Lion_desc:0 "Boosted by the successes of recent reforms and the growing economy, the Belgian population has once again found the pre-Weltkrieg enthusiasm which propelled them to the world top. In the prelude of another European crisis, unity across the language border is strenghtened and all citizens of the nation are preparing themselves to sustain Belgian sovereignty, should war come to it's lands."
+BEL_The_Lion_desc:0 "최근 개혁과 경제 성장의 성공에 힘입어 벨기에 인구는 다시 한번 세계대전의 열정을 발견하여 세계 정상에 올랐습니다. 유럽의 또 다른 위기의 서막에서 언어의 경계를 가로지르는 단결이 강화되며 모든 시민들은 전쟁이 그 땅에 오게 될 경우 벨기에의 주권을 유지할 준비를 하고 있습니다."
 BEL_Secretaries:0 "Economic Secretaries"
 BEL_Secretaries_desc:0 "As the first step in Plan De Man, the creation of secretaries controlled by technocrats were tasked with fighting unemployment and countering national populist propaganda."
 BEL_Civilian:0 "Civilian Focus"
